exports[`<IconMenu /> should render not selected internal menu 1`] = `
<div
  style={
    Object {
      "background": "none",
      "color": undefined,
    }
  }>
  <div
    style={
      Object {
        "background": "#36ABE0",
      }
    }>
    <Icon
      fill="currentColor"
      icon={
        Object {
          "children": Array [
            Object {
              "attribs": Object {
                "d": "M1107 877l-742 742q-19 19-45 19t-45-19l-166-166q-19-19-19-45t19-45l531-531-531-531q-19-19-19-45t19-45l166-166q19-19 45-19t45 19l742 742q19 19 19 45t-19 45z",
              },
              "name": "path",
            },
          ],
          "viewBox": "0 0 1280 1792",
        }
      }
      size={16} />
  </div>
  <FormattedMessage
    defaultMessage="Menu item"
    id="internalMenu.text"
    values={Object {}} />
</div>
`;

exports[`<IconMenu /> should render not selected internal menu 2`] = `
<div
  style={
    Object {
      "background": "#36ABE0",
      "color": "white",
    }
  }>
  <div
    style={
      Object {
        "background": "#36ABE0",
      }
    }>
    <Icon
      fill="currentColor"
      icon={
        Object {
          "children": Array [
            Object {
              "attribs": Object {
                "d": "M1107 877l-742 742q-19 19-45 19t-45-19l-166-166q-19-19-19-45t19-45l531-531-531-531q-19-19-19-45t19-45l166-166q19-19 45-19t45 19l742 742q19 19 19 45t-19 45z",
              },
              "name": "path",
            },
          ],
          "viewBox": "0 0 1280 1792",
        }
      }
      size={16} />
  </div>
  <FormattedMessage
    defaultMessage="Menu item"
    id="internalMenu.text"
    values={Object {}} />
  <Icon
    fill="currentColor"
    icon={
      Object {
        "children": Array [
          Object {
            "attribs": Object {
              "d": "M1107 877l-742 742q-19 19-45 19t-45-19l-166-166q-19-19-19-45t19-45l531-531-531-531q-19-19-19-45t19-45l166-166q19-19 45-19t45 19l742 742q19 19 19 45t-19 45z",
            },
            "name": "path",
          },
        ],
        "viewBox": "0 0 1280 1792",
      }
    }
    size={25} />
</div>
`;
